# pjecz-andromeda

./: .gcloudignore  .gitignore  README.md  app.yaml  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt
.github/workflows/: pelican-publish-google-cloud-deploy.yaml
content/: robots.txt
content/aviso-de-privacidad/: aviso-de-privacidad.md
content/aviso_de_privacidad/: aviso_de_privacidad.md
content/blog/: prueba.md
content/contacto/: contacto.md
content/datos/: datos.md
content/datos-abiertos/: datos-abiertos.md
content/inicial/: inicial.html
content/licencias/: agpl3.md
content/pages/: contact.md  datos_abiertos.md  license.md  plataformas.md  plataformas_citas.md  plataformas_notarias.md  plataformas_pagos.md  plataformas_plataforma_web.md  privacy_policy.md  service_terms.md  start_page.html
content/plataforma-web/: plataforma-web.md
content/plataformas/: citas.md  notarias.md  pagos.md  plataforma_web.md  plataformas.md
content/plataformas/citas/: citas.md
content/plataformas/notarias/: notarias.md
content/plataformas/pagos/: pagos.md
content/plataformas/plataforma-web/: plataforma_web.md
content/politicas-de-uso/: informacion.md  sitio-web.md
content/politicas_de_uso/: politicas_de_uso.md
content/portal-notarias/: portal-notarias.md
content/portal-pagos/: portal-pagos.md
content/sistema-citas/: sistema-citas.md
plugins/sitemap/: sitemap.py
themes/justiciadigital/templates/: base.html  category.html  footer.html  google-analytics.html  header.html  index.html  page.html  start-plataformas.html
(+9 files in other folders)
